--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,33 @@
 h1 {
   color: green;
   text-align: center;
+}
+h2 {
+  text-align: center;
   font-style: italic;
+  color: black;
+  font-size: 75%
 }
 p {
   text-align: center;
 }
 li {
   text-align: center;
+  font-size: 110%
+}
+li {
+  text-align: center;
+  font-size: 110%
 }
 ul {
   text-align: center;
 }
 body {
     background-color: white;
-    color: green;
+    color: lightblue;
 }
 img {
   display: block;
   margin: auto;
-  width: 45%
+  width: 50%
 }
